// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`skeleton-item/SkeletonItem snapshot tests  1`] = `
.emotion-0 {
  overflow: hidden;
  position: relative;
}

.emotion-0:after {
  -webkit-animation: 3s ease-in infinite shine;
  animation: 3s ease-in infinite shine;
  background-image: linear-gradient(135deg,undefined 0%,undefined 40%,undefined 50%,undefined 60%,undefined 100%);
  bottom: 0;
  content: "";
  left: 0;
  position: absolute;
  top: 0;
  width: 300px;
}

@-webkit-keyframes shine {
  from {
    -webkit-transform: translateX(-100%);
    -ms-transform: translateX(-100%);
    transform: translateX(-100%);
  }

  60% {
    -webkit-transform: translateX(100%);
    -ms-transform: translateX(100%);
    transform: translateX(100%);
  }

  to {
    -webkit-transform: translateX(100%);
    -ms-transform: translateX(100%);
    transform: translateX(100%);
  }
}

@keyframes shine {
  from {
    -webkit-transform: translateX(-100%);
    -ms-transform: translateX(-100%);
    transform: translateX(-100%);
  }

  60% {
    -webkit-transform: translateX(100%);
    -ms-transform: translateX(100%);
    transform: translateX(100%);
  }

  to {
    -webkit-transform: translateX(100%);
    -ms-transform: translateX(100%);
    transform: translateX(100%);
  }
}

<div
  className="hig__skeleton-itemV1 emotion-0"
/>
`;

exports[`skeleton-item/SkeletonItem snapshot tests  2`] = `
.emotion-0 {
  height: 90px;
  overflow: hidden;
  position: relative;
  margin-bottom: 12px;
  max-width: 100px;
}

.emotion-0:after {
  -webkit-animation: 3s ease-in infinite shine;
  animation: 3s ease-in infinite shine;
  background-image: linear-gradient(135deg,undefined 0%,undefined 40%,undefined 50%,undefined 60%,undefined 100%);
  bottom: 0;
  content: "";
  left: 0;
  position: absolute;
  top: 0;
  width: 300px;
}

@-webkit-keyframes shine {
  from {
    -webkit-transform: translateX(-100%);
    -ms-transform: translateX(-100%);
    transform: translateX(-100%);
  }

  60% {
    -webkit-transform: translateX(100%);
    -ms-transform: translateX(100%);
    transform: translateX(100%);
  }

  to {
    -webkit-transform: translateX(100%);
    -ms-transform: translateX(100%);
    transform: translateX(100%);
  }
}

@keyframes shine {
  from {
    -webkit-transform: translateX(-100%);
    -ms-transform: translateX(-100%);
    transform: translateX(-100%);
  }

  60% {
    -webkit-transform: translateX(100%);
    -ms-transform: translateX(100%);
    transform: translateX(100%);
  }

  to {
    -webkit-transform: translateX(100%);
    -ms-transform: translateX(100%);
    transform: translateX(100%);
  }
}

<div
  className="hig__skeleton-itemV1 emotion-0"
/>
`;
